@@ -283,6 +283,17 @@ NORETURN(void exit(int x));],
 done])
 AC_DEFINE_UNQUOTED([NORETURN(x)], $rb_cv_noreturn)
 
+AC_CACHE_CHECK([for RUBY_EXTERN], rb_cv_ruby_extern,
+[rb_cv_ruby_extern=no
+for mac in "__attribute__((dllimport))" "__declspec(dllimport)"; do
+  AC_TRY_COMPILE(
+    [extern $mac void conftest(void);],
+    [rb_cv_ruby_extern="extern $mac"; break])
+done])
+test "x$rb_cv_ruby_extern" = xno || AC_DEFINE_UNQUOTED(RUBY_EXTERN, $rb_cv_ruby_extern)
+
+XCFLAGS="$XCFLAGS -DRUBY_EXPORT"
+
 dnl Check whether we need to define sys_nerr locally
 AC_CHECK_DECLS([sys_nerr], [], [], [$ac_includes_default
 #include <errno.h>])
@@ -1346,7 +1357,6 @@ case "$target_os" in
 	    COMMON_HEADERS="windows.h winsock.h"
 	    ;;
 	esac
-	XCFLAGS="$XCFLAGS"
 	LIBRUBY_DLDFLAGS="${DLDFLAGS}"' -Wl,--out-implib=$(LIBRUBY)'
 	LIBRUBY_ALIASES=''
 	FIRSTMAKEFILE=GNUmakefile:cygwin/GNUmakefile.in
