@@ -215,6 +215,7 @@ $(CONFIG_H): $(MKFILES) $(srcdir)/wince/Makefile.sub
 !if $(MSC_VER) > 1100
 #define NORETURN(x) __declspec(noreturn) x
 !endif
+#define RUBY_EXTERN extern __declspec(dllimport)
 #define HAVE_DECL_SYS_NERR 1
 #define HAVE_FCNTL_H 1
 #define HAVE_SYS_UTIME_H 1
